[package]
name = "peak-can"
description = "Rust bindings APIs for PEAK-System Technik GmbH"
version = "0.2.0"
edition = "2024"
authors = ["Tu Nguyen <nvtu96@gmail.com>"]
readme = "README.md"
repository = "https://github.com/TuEmb/peak-can-rs"
license = "MIT OR Apache-2.0"

[dependencies]
libloading = "0.8"
peak-can-sys = "0.2.0"
